# geojson-faker

./: .gitignore  Makefile  pyproject.toml  readme.md
geojson_faker/: __init__.py  constants.py  faker.py  generators.py
geojson_faker/realistic_data/countries/: afghanistan.json  albania.json  algeria.json  andorra.json  angola.json  antigua_and_barbuda.json
tests/: faker_test.py
