[tool.poetry]
name = "geojson-faker"
version = "0.1.0"
description = "GeoJson fake generator."

authors = ["impocode <impocode@impocode.com>"]
maintainers = ["impocode <impocode@impocode.com>"]

license= "MIT"
readme = "readme.md"

keywords = ["geojson"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

homepage = "https://github.com/impocode/geojson-faker"
repository = "https://github.com/impocode/geojson-faker"
documentation = "https://github.com/impocode/geojson-faker"

[tool.poetry.dependencies]
python = "^3.12"
geojson-pydantic = "^1.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
